--- a/current-opening.html
+++ b/current-opening.html
@@ -78,7 +78,7 @@
 				</table>
 				<div class="loader"></div>
 				<!-- Modal -->
-						<div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+						<div class="modal fade" id="send-your-resume" tabindex="1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
 						  <div class="modal-dialog modal-dialog-centered" role="document">
 						    <div class="modal-content">
 						      <div class="modal-header">
@@ -91,7 +91,11 @@
 						        <form>
 								  <div class="form-group">
 								    <label>Name</label>
-								    <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter name">
+								    <input type="text" class="form-control" placeholder="Enter name">
+								  </div>
+								  <div class="form-group">
+								    <label>email</label>
+								    <input type="email" class="form-control" placeholder="Enter name">
 								  </div>
 								  <div class="form-group">
 								    <label >Phone</label>
@@ -205,7 +209,7 @@
 							<td>${data[keys[i]].qty}</td>
 							<td>${data[keys[i]].country}</td>
 							<td>${data[keys[i]].salary}</td>
-							<td><button class="btn btn-sm btn-success" data-toggle="modal" data-target="#exampleModalCenter">Interested</button></td>
+							<td><button class="btn btn-sm btn-success" data-toggle="modal" data-target="#send-your-resume">Interested</button></td>
 						</tr>
 					`;
 				}
