--- a/admin.html
+++ b/admin.html
@@ -16,7 +16,7 @@
 		<div class="row">
 			<div class="col">
 				<nav class="navbar navbar-expand-lg navbar-dark">
-				  <a class="navbar-brand" href="#"> <img src="images/sufiana-white.png" alt=""></a>
+				  <a class="navbar-brand" href="index.html"> <img src="images/sufiana-white.png" alt=""></a>
 				  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 				    <span class="navbar-toggler-icon"></span>
 				  </button>
@@ -61,7 +61,7 @@
 			<div class="col-md-3"></div>
 			<div class="col-md-6">
 				<h1 class="display-5 text-center">Login</h1>
-				<form method="post" action="modules.php">
+				<form >
 				  <div class="form-group">
 				    <label>email</label>
 				    <input type="email" class="form-control" id="email-login" placeholder="Enter your mail id">
