--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		<div class="row">
 			<div class="col">
 				<nav class="navbar navbar-expand-lg navbar-dark">
-				  <a class="navbar-brand" href="index.php"> <img src="images/sufiana-white.png" alt=""></a>
+				  <a class="navbar-brand" href="index.html"> <img src="images/sufiana-white.png" alt=""></a>
 				  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 				    <span class="navbar-toggler-icon"></span>
 				  </button>
@@ -65,13 +65,25 @@
 	    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
 	    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
 	    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+	    <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+	    <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
+	    <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
 	  </ol>
 	  <div class="carousel-inner">
-	    <div class="carousel-item active">
+	  	<div class="carousel-item active">
+	      <img class="d-block w-100" src="images/bg-4.jpg" alt="First slide">
+	    </div>
+	    <div class="carousel-item">
 	      <img class="d-block w-100" src="images/bg-1.jpg" alt="First slide">
+	    </div>
+	  	<div class="carousel-item ">
+	      <img class="d-block w-100" src="images/bg-5.jpg" alt="First slide">
 	    </div>
 	    <div class="carousel-item">
 	      <img class="d-block w-100" src="images/bg-2.jpg" alt="Second slide">
+	    </div>
+	    <div class="carousel-item">
+	      <img class="d-block w-100" src="images/bg-6.jpg" alt="Second slide">
 	    </div>
 	    <div class="carousel-item">
 	      <img class="d-block w-100" src="images/bg-3.jpg" alt="Third slide">
